--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,5 +1,5 @@
 <h2>Cart</h2>
-<div class="cart-item" *ngfor="let item of items">
+<div class="cart-item" *ngFor="let item of items">
   <span> {{ item.name }} </span>
   <span> {{ item.price | currency }} </span>
 </div>
